tests/compilation_failure_tests/iteration_order/malformed_non_ident_dash.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(-)]
enum Enum {
    A, B, C
}
